--- a/scss/media-queries/header-section-media-queries/_header-section-desktop-1920px.scss
+++ b/scss/media-queries/header-section-media-queries/_header-section-desktop-1920px.scss
@@ -4,12 +4,29 @@
       font-size: 34px;
     }
 
-    .search-bar input {
-      width: 300px;
+    .search-bar {
+      display: flex;
+      position: static;
+      ;
+
+
     }
+    .sidebar{
+    display: none;
+    }
+
+    .search-bar input {
+      width: 250px;
+
+    }
+
+
+    ul li a {
+      font-size: 18px;
+    }
+
   }
 
-  ul li a {
-    font-size: 18px;
-  }
+
+
 }
