--- a/scss/media-queries/header-section-media-queries/_header-section-tablet-1024px.scss
+++ b/scss/media-queries/header-section-media-queries/_header-section-tablet-1024px.scss
@@ -15,6 +15,10 @@
       margin-left: 15px;
 
     }
+    .buttons{
+      display: flex;
+     
+    }
 
     .social-icons {
       display: none;
